client/src/components/Register/Register.css
@media (min-width: 768px) {
    .container-xs {
        max-width: 570px;
    }
}

.required {
    color: red;
    font-weight: 700;
    border: 0!important;
    text-decoration: none
}

.text-gray {
    color: #8F9396 !important;
}

p {
    display: block;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

